--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -14,7 +14,7 @@
         <input type="text" id="usernick" name="usernick" class="form-control" placeholder="닉네임" />
         <span style="color:#0054FF" id="usernickError"></span>
         <div class="button_flex">
-            <button style="display :inline-block;" class="button_blue" onclick="joinBtn()">회원가입</button>
+            <button style="display :inline-block;" class="button_blue size_full" onclick="joinBtn()">회원가입</button>
         </div>
     </div>
 
