--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="button_flex">
-                <button type="button" onclick="updateSubmit()" class="button_blue">수정하기</button>
+                <button type="button" onclick="updateSubmit()" class="button_blue size_ful">수정하기</button>
             </div>
     </div>
 
