--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -12,7 +12,7 @@
                 <label for="files">이미지 업로드</label>
             </div>
         <div class="button_flex">
-            <button onclick="submit()" class="button_blue">작성하기</button>
+            <button onclick="submit()" class="button_blue size_full">작성하기</button>
         </div>
     </div>
   <script>
