--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,15 +3,23 @@
 <th:block layout:fragment="content">
     <div class="form_middle">
     <h2>로그인 </h2></br>
-        <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
-        <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
-        <a href="/oauth2/authorization/kakao" class="btn btn-secondary active" role="button">Kakao Login</a>
+        <div class="social_login">
+            <a href="/oauth2/authorization/google" >
+            <img src="/images/google.png" alt="구글" title="구글" width="33" height="33">
+            </a>
+            <a href="/oauth2/authorization/naver">
+                <img src="/images/naver.jpg" alt="네이버" title="네이버" width="33" height="33">
+            </a>
+            <a href="/oauth2/authorization/kakao">
+                <img src="/images/kakaotalk.png" alt="카카오 톡 " title="카카오 톡" width="33" height="33">
+            </a>
+        </div>
     <form class="form-signin" method="post" th:action="@{/login/proc}">
         <input type="text" id="username" name="email" class="form-control" placeholder="아이디" autofocus="" />
         <input type="password" id="password" name="userpw" class="form-control" placeholder="비밀번호" />
         <p id="valid" class="alert alert-danger" th:if=${exception} th:text="${exception}"></p>
          <div class = 'button_flex'>
-           <input id="joinBtn" type="submit" class="button_black" value="로그인" />
+           <input id="joinBtn" type="submit" class="button_black size_full" value="로그인" />
          </div>
     </form>
     </div>
