--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -40,7 +40,7 @@
             formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
 
             $.ajax({
-            　　type:'post'
+            　　type:'patch'
             　  , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
                 , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
             　 　, data: formData
