--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -1,3 +1,4 @@
+/* 메인 홈페이지 글 */
 .article {
 margin:0 auto;
 width:800px;
@@ -6,6 +7,7 @@ border:1px solid #e3e3e3;
 border-radius:10px;
 margin-bottom:30px;
 }
+/* 글 상세 페이지 이미지 */
 .article_images {
 margin:0 auto;
 width:800px;
@@ -14,6 +16,7 @@ border:1px solid #e3e3e3;
 border-radius:10px;
 margin-bottom:30px;
 }
+/* 메인 홈페이지 작성하기 버튼 */
 .article_button {
 display:flex;
 justify-content:right;
@@ -21,13 +24,11 @@ margin:0 auto;
 margin-bottom:5px;
 width:800px;
 }
-
+/* 요소 사이즈 full 설정 */
 .size_full {
 width:100%
 }
-
-
-
+/* 파란색 버튼 */
 .button_blue {
 border-radius:10px;
 color:#FFFFFF;
@@ -36,6 +37,7 @@ margin:15px 5px 5px 5px;
 border:3px solid #0054FF;
 background-color: #0054FF;
 }
+/* 빨간색 버튼 */
 .button_red  {
 border-radius:10px;
 margin:15px 5px 5px 5px;
@@ -44,6 +46,7 @@ height:40px;
 border:3px solid #FF0000;
 background-color: #FF0000;
 }
+/* 검은색 버튼 */
 .button_black  {
 border-radius:10px;
 color:#FFFFFF;
@@ -53,7 +56,7 @@ border:3px solid #000000;
 background-color: #000000;
 }
 
-
+/* 회원가입 Id 중복체크 버튼 */
 .idcheck_btn {
 position:relative;
 border-radius:10px;
@@ -65,16 +68,17 @@ background-color: #000000;
 top:5px;
 width:100px
 }
-
+/* 버튼 flex */
 .button_flex {
 display:flex;
 }
 
+/* 작성,수정,로그인,회원가입 form */
 .form_middle {
 margin: 100px auto;
 width:500px;
 }
-
+/* 페이지 리스트 */
 .paging_list {
 display:flex;
 justify-content:space-between;
@@ -82,32 +86,31 @@ margin: 0 auto;
 margin-Top:20px;
 width:500px;
 }
-
+/* 글 작성/수정 시간,글쓴이,조회수 정보 */
 .article_addtext{
 font-size:12px;
 }
-
+/* 상세페이지 내용 div */
 .detail_content_area{
 white-space: pre-line;
 }
-
+/* 회원가입 ID check div */
 .join_idcheck{
 display:flex;
 position:relative;
 top:10px;
 }
-
+/* 수정페이지 내용 div */
 .update_content_area{
 width:500px;
 height:500px;
 }
-
+/* 팝업 on style */
 .modal.on {
     display: block;
 }
-
+/* 팝업 배경 */
 .modal {
-/*팝업 배경*/
 	display: none; /*평소에는 보이지 않도록*/
     position: absolute;
     top:0;
@@ -117,8 +120,8 @@ height:500px;
     overflow: hidden;
     background: rgba(0,0,0,0.5);
 }
+/* 팝업 */
 .modal .modal_popup {
-/*팝업*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -127,6 +130,7 @@ height:500px;
     background: #ffffff;
     border-radius: 20px;
 }
+/* 팝업 닫기 버튼 */
 .modal .modal_popup .close_btn {
     width:110px;
     padding: 10px 20px;
@@ -137,7 +141,7 @@ height:500px;
     cursor: pointer;
     transition: box-shadow 0.2s;
 }
-
+/* 상세페이지 댓글 수 div */
 .comment_count {
     display: flex;
     justify-content: end;
@@ -147,6 +151,7 @@ height:500px;
     border: 1px solid #e3e3e3;
     border-radius: 10px;
 }
+/* 상세페이지 댓글 div */
 .article_comments {
     margin: 0 auto;
     width: 800px;
@@ -154,12 +159,14 @@ height:500px;
     border-bottom: 1px solid #e3e3e3;
     border-radius: 10px;
 }
+/* 상세페이지 대댓글 div */
 .reply_comments {
     margin: 0 auto;
     width: 800px;
     padding: 20px;
     border-radius: 10px;
 }
+/* 상세페이지 댓글 작성 div */
 .comment_write{
     margin: 0 auto;
     width: 800px;
@@ -168,40 +175,40 @@ height:500px;
     border-radius: 10px;
     margin-top:10px;
 }
-
+/* 상세페이지 댓글 입력창,등록 버튼 div */
 .comment_write div {
 display: flex;
 }
-
+/* 상세페이지 댓글 입력창 */
 .comment_write textarea {
   width: 100%;
 }
-
+/* 상세페이지 댓글 등록 버튼 */
 .comment_write button{
     width: 80px;
     margin: 20px;
     border: 1px solid;
     border-radius: 10px;
 }
+/* 상세페이지 댓글 삭제 버튼 */
 .comment_delete button{
     border: 1px solid;
     border-radius: 10px;
     color: #FF0000;
 }
-
+/* 상세페이지 답글 달기 버튼 */
 .reply_button{
     border: 1px solid;
     border-radius: 10px;
     color: #000000;
     margin:10px 0;
 }
-
-
+/* 로그인 페이지 소셜 로그인 div */
 .social_login {
     display: flex;
     justify-content: center;
 }
-
+/* 로그인 페이지 소셜 로그인 링크 아이콘 */
 .social_login a {
 margin: 0 15px;
 }
