--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,22 +1,27 @@
+/* header div */
 .header {
    margin:20px;
    display:flex;
 }
+/* header 자유/익명 게시판 div */
 .header_menu {
 display:flex;
 justify-content:right;
 width:55%;
 }
+/* header 로그인/로그아웃 div */
 .header_auth {
 display:flex;
 justify-content:right;
 align-items:center;
 width:40%;
 }
+/* header 로그인/로그아웃 링크 */
 .header_auth a{
 font-size:13px;
 margin : 0 5px;
 }
+/* header 로그인/로그아웃 리스트 목록 */
 .header_menu li{
     display:inline-block;
     padding:10px;
