--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -2,51 +2,66 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.w3.org/1999/xhtml" layout:decorate="layout/default_layout">
 <th:block layout:fragment="content">
+    <!-- 삭제 확인 창-->
     <div class="modal">
         <div class="modal_popup">
             <h5> 삭제를 원하시면 예를 눌러주세요. </h5></br>
+            <!-- 예 버튼 -->
             <button type="button" onclick="articleDeleteYes(this.getAttribute('data-article-id'))" th:attr="data-article-id=${article.id}" class="close_btn">예</button>
+            <!-- 아니요 버튼 -->
             <button type="button" onclick="articleDeleteNo()" class="close_btn">아니요</button>
         </div>
     </div>
+    <!-- 수정/삭제 버튼 -->
     <div class="article_button" sec:authorize="isAuthenticated()">
+        <!-- 수정 버튼 -->
         <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" class="button_blue" th:onclick="|location.href='@{/article/update/{id}(id=${article.id})}'|">수정하기</button>
+        <!-- 삭제 버튼 -->
         <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" onclick="articleDelete()" class="button_red" >삭제하기</button>
     </div>
+    <!-- 글 정보 -->
     <div class="article">
-            <h2 class="bold" th:text="${article.title}" >
-            </h2><br>
+        <!-- 글 제목 -->
+        <h2 class="bold" th:text="${article.title}" ></h2><br>
+        <!-- 글 내용 -->
         <div class="detail_content_area" th:text="${article.content}"></div></br>
+        <!-- 글 작성자 -->
         <span class="article_addtext bold" th:text="${article.member.usernick}"></span>
         <span> · </span>
+        <!-- 글 작성 시간 -->
         <span class="article_addtext" th:text="${@timeUtil.calculateTimeAgo(article.createdDate)}"></span>
         <span> · </span>
+        <!-- 글 조회수  -->
         <span class="article_addtext" th:text="${article.viewcount}"></span></br>
     </div>
-
+    <!-- 글 이미지-->
     <div class="article_images" th:if="${article.imageUrls.size() != 0}">
         <label class="form-label">이미지</label>
         <div th:each="imageUrl : ${article.imageUrls}">
             <img th:src="@{${imageUrl}}" width="200px" height="200px">
         </div>
     </div>
+    <!-- 댓글 갯수 -->
     <div class="comment_count ">
         💬 댓글
         <b class="bold" th:text="${comment.getTotalElements()}"></b>
         개
     </div>
-
+    <!-- 로그인/로그아웃 -->
     <div th:if="${endPage != 0}" th:each="comment : ${comment}" class="article_comments">
-
+        <!-- 부모댓글이 삭제 상태가 아닌 경우 댓글 표시 -->
         <div th:if="${comment.deleted == false}">
+            <!-- 댓글 작성자 -->
             <span class="bold" th:text="${comment.member.usernick}"></span>
             <span> · </span>
+            <!-- 댓글 작성 시간 -->
             <span th:text="${@timeUtil.calculateTimeAgo(comment.createdDate)}"></span>
             <span> · </span>
+            <!-- 댓글 삭제 버튼-->
             <span sec:authorize="isAuthenticated()" class="comment_delete">
                 <button onclick="deleteComment(this.getAttribute('data-comment-id'))" th:attr="data-comment-id=${comment.id}" th:if="${comment.member.id == @authenticationUtil.getCurrentMember()?.id}">삭제</button>
             </span><br><br>
-
+            <!-- 댓글 내용 -->
             <div th:text="${comment.content}"></div>
 
             <!-- 답글 달기 버튼 -->
@@ -54,6 +69,7 @@
                 <button class="reply_button" th:id="'reply_button_' + ${comment.id}" onclick="replyButton(this.getAttribute('data-comment-id'))" th:attr="data-comment-id=${comment.id}">답글 달기</button>
             </div>
         </div>
+        <!-- 대댓글이 살아 있는 상태에서댓글이 삭제 상태인 경우 삭제된 댓글 표시 -->
         <div th:unless="${comment.deleted == false}">
             <div> 삭제된 댓글 입니다!</div>
         </div>
@@ -61,28 +77,37 @@
         <div th:if="${comment.child != null}">
             <div th:each="child : ${comment.child}">
                 <div class="reply_comments">
+                    <!-- 대댓글 작성자 -->
                     <span class="bold" th:text="${comment.member.usernick}"></span>
                     <span> · </span>
+                    <!-- 대댓글 작성 시간 -->
                     <span th:text="${@timeUtil.calculateTimeAgo(child.createdDate)}"></span>
                     <span> · </span>
+                    <!-- 대댓글 삭제 버튼 -->
                     <span sec:authorize="isAuthenticated()" class="comment_delete">
                         <button onclick="deleteReply(this.getAttribute('data-child-id'))" th:attr="data-child-id=${child.id}" th:if="${comment.member.id == @authenticationUtil.getCurrentMember()?.id}">삭제</button>
                     </span><br><br>
                 <div style="display:flex">
+                    <!-- 댓글 작성자 -->
                     <span style="color:#6c757d; margin:0 10px;" th:text="${child.comment.member.usernick}"> </span>
+                    <!-- 대댓글 내용 -->
                     <div th:text="${child.content}"></div>
                 </div>
                 </div>
             </div>
         </div>
-
+        <!-- 답글 쓰기 form -->
         <div class="reply-form" th:id="'reply_form_' + ${comment.id}" style="display: none;">
             <div class="comment_write">
                 <h2>답글쓰기</h2>
+                <!-- 권한이 있을시 -->
                 <div sec:authorize="isAuthenticated()">
+                    <!-- 대댓글 입력 창 -->
                     <textarea type="text" th:id="'reply_content' + ${comment.id}" ></textarea>
+                    <!-- 대댓글 등록 버튼 -->
                     <button onclick="replySubmit(this.getAttribute('data-comment-id'))" th:attr="data-comment-id=${comment.id}" class="reply-submit">등록</button>
                 </div>
+                <!-- 권한이 없을시 로그인 문구 표시 -->
                 <div sec:authorize="isAnonymous()" class="disabled">
                     <textarea type="text" >로그인을 해주세요</textarea>
                     <button >등록</button>
@@ -91,41 +116,47 @@
         </div>
 
     </div>
-
+    <!-- 댓글 페이지 리스트 -->
     <div th:if="${endPage != 0}" class="paging_list">
+        <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
         <a class="page_previous" th:classappend=" ${!comment.hasPrevious()} ? 'disabled' " th:href="${!comment.isFirst()} ? @{/article/detail/{id}(id=${article.id},page=${comment.getPageable().getPageNumber()})}"> 이전 </a>
-
+        <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
         <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-		<!-- 현재페이지는 링크 없이 숫자만 -->
+		    <!-- 현재페이지는 링크 없이 숫자만 -->
             <span th:if="${page == comment.getPageable().getPageNumber() + 1}" th:text="${page}"></span>
             <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
             <span th:unless="${page == comment.getPageable().getPageNumber() + 1}">
-        <a th:href="@{/article/detail/{id}(id=${article.id},page=${page})}" th:text="${page}"></a>
+              <a th:href="@{/article/detail/{id}(id=${article.id},page=${page})}" th:text="${page}"></a>
             </span>
         </span>
-        <!-- 다음 링크 활성화 비활성화 -->
+        <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
         <a class="page_next" th:classappend=" ${!comment.hasNext()} ? 'disabled' "  th:href="${comment.isLast()} ? '#' : @{/article/detail/{id}(id=${article.id},page=${comment.number + 2})}"> 다음 </a>
     </div>
+
+    <!-- 댓글 쓰기 form -->
     <div class="comment_write">
             <h2>댓글쓰기</h2>
+            <!-- 권한이 있을시 -->
             <div sec:authorize="isAuthenticated()">
+                <!-- 댓글 입력 창 -->
                 <textarea type="text" id="content" ></textarea>
+                <!-- 댓글 등록 버튼 -->
                 <button onclick="commentSubmit(this.getAttribute('data-article-id'))" th:attr="data-article-id=${article.id}" >등록</button>
             </div>
-           <div sec:authorize="isAnonymous()" class="disabled">
-            <textarea type="text" >로그인을 해주세요</textarea>
-            <button >등록</button>
-           </div>
-
+           <!-- 권한이 없을시 로그인 문구 표시 -->
+             <div sec:authorize="isAnonymous()" class="disabled">
+                <textarea type="text" >로그인을 해주세요</textarea>
+                <button >등록</button>
+            </div>
     </div>
-
     <script th:inline="javascript">
-
                  const modal = document.querySelector('.modal');
+
+                 // 삭제하기 버튼을 누를시 팝업창
                  function articleDelete() {
                         modal.style.display = 'block';
                  }
-
+                 // 예 버튼을 누를시 글 삭제
                  function articleDeleteYes(articleId) {
                      var obj = {};
                      obj.id = articleId
@@ -137,16 +168,17 @@
                         　　, success: function(data) {
                                  modal.style.display = 'none';
                                  location.href='/';
-                        　　}, error:function(e) {
+                        　　}
+                           , error:function(e) {
                                 console.log(e);
                         　　}
                         });
                  }
-
+                 // 아니요 버튼을 누를시 팝업창 닫기
                  function articleDeleteNo() {
                          modal.style.display = 'none';
                  }
-
+                 // 댓글 작성
                  function commentSubmit(articleId) {
                          var obj = {};
                          obj.content = $("#content").val()
@@ -157,16 +189,17 @@
                                 　　, data: JSON.stringify(obj)
                                 　　, url: '/comment/write'
                                 　　, success: function(data) {
-                                       window.location.href = '/article/detail/' + articleId;
-                                　　}, error:function(e) {
-                                    var jsonResponse = JSON.parse(e.responseText);
-                                    if (jsonResponse.hasOwnProperty('content')) {
-                                    alert(jsonResponse.content);
-                                    }
+                                        window.location.href = '/article/detail/' + articleId;
+                                　　}
+                                   , error:function(e) {
+                                        var jsonResponse = JSON.parse(e.responseText);
+                                        if (jsonResponse.hasOwnProperty('content')) {
+                                        alert(jsonResponse.content);
+                                        }
                                 　　}
                          });
                 }
-
+                // 댓글 삭제
                 function deleteComment(commentId) {
 
                    var obj = {};
@@ -179,12 +212,13 @@
                         　　, url: '/comment/delete'
                         　　, success: function(data) {
                                  window.location.href = '/article/detail/' + [[${article.id}]];
-                        　　}, error:function(e) {
-                                console.log(e);
+                        　　}
+                           , error:function(e) {
+                                 console.log(e);
                         　　}
                         });
-                 };
-
+                };
+                // 답글 달기 버튼을 누를시 대댓글 form 띄우기
                 function replyButton(commentId) {
                          const replyform = document.getElementById('reply_form_' + commentId);
                          if (replyform.style.display == "block") {
@@ -194,7 +228,7 @@
                            replyform.style.display = 'block';
                          }
                 }
-
+                // 대댓글 작성
                 function replySubmit(commentId) {
 
                      var obj = {};
@@ -208,15 +242,16 @@
                             　　, url: '/reply/write'
                             　　, success: function(data) {
                                     window.location.href = '/article/detail/' + [[${article.id}]];
-                            　　}, error:function(e) {
+                            　　}
+                               , error:function(e) {
                                  var jsonResponse = JSON.parse(e.responseText);
-                                if (jsonResponse.hasOwnProperty('content')) {
-                                alert(jsonResponse.content);
-                                }
+                                 if (jsonResponse.hasOwnProperty('content')) {
+                                    alert(jsonResponse.content);
+                                 }
                             　　}
                             });
                 }
-
+                // 대댓글 삭제
                 function deleteReply(replyId) {
                        var obj = {};
                        obj.id = replyId;
@@ -228,8 +263,9 @@
                             　　, url: '/reply/delete'
                             　　, success: function(data) {
                                      window.location.href = '/article/detail/' + [[${article.id}]];
-                            　　}, error:function(e) {
-                                    console.log(e);
+                            　　}
+                               , error:function(e) {
+                                     console.log(e);
                             　　}
                             });
                 };
