--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/default_layout">
 <th:block layout:fragment="content">
+
+    <!-- 로그인 form -->
     <div class="form_middle">
-    <h2>로그인 </h2></br>
-        <div class="social_login">
-            <a href="/oauth2/authorization/google" >
-            <img src="/images/google.png" alt="구글" title="구글" width="33" height="33">
-            </a>
-            <a href="/oauth2/authorization/naver">
+         <h2>로그인 </h2></br>
+        <!-- 소셜 로그인 -->
+         <div class="social_login">
+            <!-- 구글 로그인 -->
+             <a href="/oauth2/authorization/google" >
+                <img src="/images/google.png" alt="구글" title="구글" width="33" height="33">
+             </a>
+            <!-- 네이버 로그인 -->
+             <a href="/oauth2/authorization/naver">
                 <img src="/images/naver.jpg" alt="네이버" title="네이버" width="33" height="33">
-            </a>
-            <a href="/oauth2/authorization/kakao">
+             </a>
+            <!-- 카카오톡 로그인 -->
+             <a href="/oauth2/authorization/kakao">
                 <img src="/images/kakaotalk.png" alt="카카오 톡 " title="카카오 톡" width="33" height="33">
-            </a>
-        </div>
-    <form class="form-signin" method="post" th:action="@{/login/proc}">
-        <input type="text" id="username" name="email" class="form-control" placeholder="아이디" autofocus="" />
-        <input type="password" id="password" name="userpw" class="form-control" placeholder="비밀번호" />
-        <p id="valid" class="alert alert-danger" th:if=${exception} th:text="${exception}"></p>
-         <div class = 'button_flex'>
-           <input id="joinBtn" type="submit" class="button_black size_full" value="로그인" />
+             </a>
          </div>
-    </form>
+        <!-- Spring Security 로그인 -->
+         <form class="form-signin" method="post" th:action="@{/login/proc}">
+             <!-- 아이디 입력창 -->
+             <input type="text" id="username" name="email" class="form-control" placeholder="아이디" autofocus="" />
+             <!-- 비밀번호 입력창 -->
+             <input type="password" id="password" name="userpw" class="form-control" placeholder="비밀번호" />
+             <!-- 로그인 에러 메세지 -->
+             <p id="valid" class="alert alert-danger" th:if=${exception} th:text="${exception}"></p>
+             <!-- 로그인 버튼 -->
+             <div class = 'button_flex'>
+                 <!-- 로그인 버튼 -->
+                 <input id="joinBtn" type="submit" class="button_black size_full" value="로그인" />
+             </div>
+         </form>
     </div>
 </th:block>
 </html>
