글 댓글 개수 데이터 추가 Update

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -44,7 +44,7 @@
     <!-- 댓글 갯수 -->
     <div class="comment_count ">
         💬 댓글
-        <b class="bold" th:text="${comment.getTotalElements()}"></b>
+        <b class="bold" th:text="${article.commentcount}"></b>
         개
     </div>
     <!-- 로그인/로그아웃 -->
