--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -31,40 +31,47 @@
      	var formData = new FormData();
         var fileInput = $('#files')[0]; // 파일 입력 필드 가져오기
         var files = fileInput.files; // 선택된 파일들 가져오기
-        // FormData에 파일 추가
-        for (var i = 0; i < files.length; i++) {
-            formData.append('value', files[i]);
+        // 첨부파일이 2개 이상일 시
+        if (files.length > 2) {
+                alert("이미지는 최대 2개까지 첨부할 수 있습니다.");
+                fileInput.value = "";
         }
-        formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
+        else {
+            // FormData에 파일 추가
+            for (var i = 0; i < files.length; i++) {
+                formData.append('value', files[i]);
+            }
+            formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
 
-        $.ajax({
-            　　type:'post'
-            　  , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
-                , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
-            　 　, data: formData
-            　 　, url: '/article/write'
-            　 　, success: function(data) {
-                    location.href='/';
-            　 　}
-                , error:function(e) {
+            $.ajax({
+                　　type:'post'
+                　  , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
+                    , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
+                　 　, data: formData
+                　 　, url: '/article/write'
+                　 　, success: function(data) {
+                        location.href='/';
+                　 　}
+                    , error:function(e) {
 
-                    // 제목 에러 메시지 설정
-                    var jsonResponse = JSON.parse(e.responseText);
-                    if (jsonResponse.hasOwnProperty('title')) {
-                        document.getElementById("titleError").innerText = jsonResponse.title;
-                    } else {
-                        document.getElementById("titleError").innerText = "";
-                    }
+                        // 제목 에러 메시지 설정
+                        var jsonResponse = JSON.parse(e.responseText);
+                        if (jsonResponse.hasOwnProperty('title')) {
+                            document.getElementById("titleError").innerText = jsonResponse.title;
+                        } else {
+                            document.getElementById("titleError").innerText = "";
+                        }
 
-                    // 내용 에러 메시지 설정
-                    if (jsonResponse.hasOwnProperty('content')) {
-                        document.getElementById("contentError").innerText = jsonResponse.content;
-                    } else {
-                        document.getElementById("contentError").innerText = "";
-                    }
-            　　　　
-            　　}
-        });
+                        // 내용 에러 메시지 설정
+                        if (jsonResponse.hasOwnProperty('content')) {
+                            document.getElementById("contentError").innerText = jsonResponse.content;
+                        } else {
+                            document.getElementById("contentError").innerText = "";
+                        }
+                　　　　
+                　　}
+            });
+        }
 
       }
 
